--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,126 +1,104 @@
-name: Build
+name: Build GWSockets
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  workflow_dispatch:
+  release:
+    types: [ created ]
 
 jobs:
-  build-windows:
-    name: Build Windows (${{ matrix.arch }})
-    runs-on: windows-2025
+  build:
+    name: Build ${{ matrix.os }} ${{ matrix.arch }}
+    runs-on: ${{ matrix.runner }}
     strategy:
+      fail-fast: false
       matrix:
-        arch: [x86, x86_64]
+        include:
+          # Linux 32-bit
+          - os: linux
+            arch: x86
+            runner: ubuntu-22.04
+            cmake_arch: -m32
+            artifact_name: gmsv_gwsockets_linux.dll
+
+          # Linux 64-bit
+          - os: linux
+            arch: x64
+            runner: ubuntu-22.04
+            cmake_arch: -m64
+            artifact_name: gmsv_gwsockets_linux64.dll
+
+          # Windows 32-bit
+          - os: windows
+            arch: x86
+            runner: windows-latest
+            cmake_arch: Win32
+            artifact_name: gmsv_gwsockets_win32.dll
+
+          # Windows 64-bit
+          - os: windows
+            arch: x64
+            runner: windows-latest
+            cmake_arch: x64
+            artifact_name: gmsv_gwsockets_win64.dll
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
-    - name: Download Premake5
+    - name: Install Linux dependencies (32-bit)
+      if: matrix.os == 'linux' && matrix.arch == 'x86'
       run: |
-        Invoke-WebRequest -Uri "https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-windows.zip" -OutFile "premake.zip"
-        Expand-Archive -Path "premake.zip" -DestinationPath "."
-      shell: pwsh
+        sudo dpkg --add-architecture i386
+        sudo apt-get update
+        sudo apt-get install -y build-essential gcc-multilib g++-multilib cmake
 
-    - name: Generate Visual Studio solution
-      run: .\premake5.exe --os=windows --file=BuildProjects.lua vs2019
-      shell: pwsh
-
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v2
-
-    - name: Build x86
-      if: matrix.arch == 'x86'
-      run: msbuild solutions/windows-vs2019/GWSockets.sln /p:Configuration=Release /p:Platform=Win32
-      shell: cmd
-
-    - name: Build x86_64
-      if: matrix.arch == 'x86_64'
-      run: msbuild solutions/windows-vs2019/GWSockets.sln /p:Configuration=Release /p:Platform=x64
-      shell: cmd
-
-    - name: List output files
-      run: Get-ChildItem -Recurse out/
-      shell: pwsh
-
-    - name: Upload artifacts (x86)
-      if: matrix.arch == 'x86'
-      uses: actions/upload-artifact@v4
-      with:
-        name: gmsv_gwsockets_win32
-        path: out/windows/gmsv_gwsockets_win32.dll
-        if-no-files-found: error
-
-    - name: Upload artifacts (x86_64)
-      if: matrix.arch == 'x86_64'
-      uses: actions/upload-artifact@v4
-      with:
-        name: gmsv_gwsockets_win64
-        path: out/windows/gmsv_gwsockets_win64.dll
-        if-no-files-found: error
-
-  build-linux:
-    name: Build Linux (${{ matrix.arch }})
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        arch: [x86, x86_64]
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Install dependencies
+    - name: Install Linux dependencies (64-bit)
+      if: matrix.os == 'linux' && matrix.arch == 'x64'
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential gcc-multilib g++-multilib
+        sudo apt-get install -y build-essential cmake
 
-    - name: Download Premake5
+    - name: Configure CMake (Linux)
+      if: matrix.os == 'linux'
       run: |
-        wget https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-linux.tar.gz
-        tar -xzf premake-5.0.0-beta2-linux.tar.gz
-        chmod +x premake5
+        cmake . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_CXX_FLAGS="${{ matrix.cmake_arch }}" -DCMAKE_C_FLAGS="${{ matrix.cmake_arch }}"
 
-    - name: Generate Makefiles
-      run: ./premake5 --os=linux --file=BuildProjects.lua gmake
+    - name: Configure CMake (Windows)
+      if: matrix.os == 'windows'
+      run: |
+        cmake . -A ${{ matrix.cmake_arch }} -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
-    - name: Build x86
-      if: matrix.arch == 'x86'
-      working-directory: solutions/linux-gmake
-      run: make config=release_x86 -j$(nproc)
+    - name: Build
+      run: cmake --build . --config RelWithDebInfo
 
-    - name: Build x86_64
-      if: matrix.arch == 'x86_64'
-      working-directory: solutions/linux-gmake
-      run: make config=release_x86_64 -j$(nproc)
+    - name: Find artifact (Linux)
+      if: matrix.os == 'linux'
+      run: |
+        find . -name "gmsv_gwsockets_*.dll" -type f
 
-    - name: List output files
-      run: find out/ -type f
+    - name: Find artifact (Windows)
+      if: matrix.os == 'windows'
+      run: |
+        Get-ChildItem -Recurse -Filter "gmsv_gwsockets_*.dll" | Select-Object FullName
 
-    - name: Upload artifacts (x86)
-      if: matrix.arch == 'x86'
+    - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: gmsv_gwsockets_linux32
-        path: out/linux/gmsv_gwsockets_linux.dll
+        name: ${{ matrix.artifact_name }}
+        path: |
+          **/gmsv_gwsockets_*.dll
         if-no-files-found: error
 
-    - name: Upload artifacts (x86_64)
-      if: matrix.arch == 'x86_64'
-      uses: actions/upload-artifact@v4
-      with:
-        name: gmsv_gwsockets_linux64
-        path: out/linux/gmsv_gwsockets_linux64.dll
-        if-no-files-found: error
-
-  create-release-artifacts:
-    name: Combine artifacts
+  release:
+    name: Create Release
+    needs: build
     runs-on: ubuntu-latest
-    needs: [build-windows, build-linux]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'release'
 
     steps:
     - name: Download all artifacts
@@ -128,18 +106,16 @@ jobs:
       with:
         path: artifacts
 
-    - name: Display structure
+    - name: List artifacts
       run: ls -R artifacts/
 
-    - name: Create release directory
-      run: |
-        mkdir -p release
-        find artifacts -name "*.dll" -exec cp {} release/ \;
-        ls -lh release/
-
-    - name: Upload combined artifacts
-      uses: actions/upload-artifact@v4
+    - name: Upload Release Assets
+      uses: softprops/action-gh-release@v1
       with:
-        name: gwsockets-all-platforms
-        path: release/
-        if-no-files-found: error
+        files: |
+          artifacts/gmsv_gwsockets_win32.dll/gmsv_gwsockets_win32.dll
+          artifacts/gmsv_gwsockets_win64.dll/gmsv_gwsockets_win64.dll
+          artifacts/gmsv_gwsockets_linux.dll/gmsv_gwsockets_linux.dll
+          artifacts/gmsv_gwsockets_linux64.dll/gmsv_gwsockets_linux64.dll
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
