Fixed vcpkg-configuration baseline

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,7 +1,6 @@
 {
   "default-registry": {
-    "kind": "git",
-    "repository": "https://github.com/Microsoft/vcpkg",
+    "kind": "builtin",
     "baseline": "74e6536215718009aae747d86d84b78376bf9e09"
   },
   "registries": []
